[package]
name = "typst-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="typst_lib"
crate-type = ["cdylib"]


[build-dependencies]
csbindgen = "1.7.4"

[dev-dependencies]
env_logger = "0.10.0"

[dependencies]
base64 = "0.21.2"
chrono = "0.4.26"
codespan-reporting = "0.11.1"
comemo = "0.3.0"
dirs = "5.0.1"
memmap2 = "0.7.1"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-flame = "0.2.0"
tracing-subscriber = "0.3.17"
typst = { path = "../typst/crates/typst" }
typst-library = { path = "../typst/crates/typst-library" }
walkdir = "2.3.3"
serde_json = "1.0"
serde = "1.0.188"
backtrace = "0.3"
libc = "0.2"

[features]
default = ["embed-fonts"]

# Embeds some fonts into the binary:
# - For text: Linux Libertine, New Computer Modern
# - For math: New Computer Modern Math
# - For code: Deja Vu Sans Mono
embed-fonts = []
